2.3.0 (released xx.xx.xxxx)
  * Add linting check to github workflow CI.
    Idea and patch by sorairolake, thanks!
  * Format the python code with ruff, and
    add a check to github workflow CI.
    Idea and initial patch by sorairolake, thanks!
    Closes: GH bug #151


2.2.0 (released 14.02.2024)

* Improved detection when running under pythonw.exe.
  Also fixes the output problems on Windows systems.
  Closes: GH bug #147, #142
* Document API functions.


2.1.1 (released 26.01.2024)

* Added support for 7zz and 7zzs programs from the Linux-specific release
  of 7-Zip.
  Closes: GH bug #145


2.1.0 (released 17.01.2024)

* Document all functions and modules, and add linting rule for it.
* Remove spaces between function and argument list
  Closes: GH bug #100
* Log warnings when subprocesses in utility functions return errors
  that are ignored.
* Fix a TypeError when using unar with passwords.
  Thanks to Kevin Matt for the patch.
  Closes: GH bug #144
* Catch errors when using file --uncompress on system which do not support this.
  Closes: GH bug #141


2.0.0 (released 14.11.2023)

* Require Python >= 3.10
* Use Python logging module instead of print() for diagnostic output.
  Diagnostic output of patool will now be printed on stderr instead of
  stdout.
  This change is the reason for the major version number increase.
  Closes: GH bug #37
* Support the jar program to list and extract ZIP archives.
* Do not use the -v option when extracting or testing ZIP archives
  with unzip, since -v lists files instead of printing verbose output.
  Closes: GH bug #49
* Use the -sae option for 7z to use the provided archive name.
  Closes: GH bug #72
* Add error message about temporary directory when extraction fails.
  Closes: GH bug #57
* Removed the recompress command.
* Use the new filter option when extracting TAR archives with the tarfile
  module in Python >= 3.12 to detect unsafe archive entries.
* Added new command "patool version" to print version information.